# tango

./: .gitignore  Cargo.toml  flake.nix
.config/: hakari.toml
crates/my-cli/: Cargo.toml
crates/my-common/: Cargo.toml
crates/tango/: Cargo.toml
crates/tango-srv/: Cargo.toml
crates/tango-srv/src/: main.rs
migrations/: 20251230165630_init.sql
src/: conf.rs  error.rs  main.rs
src/auth/: mod.rs
src/db/: mod.rs
src/http/: mod.rs
src/http/routes/: mod.rs
src/http/routes/webui/: login.rs
src/http/webui/templates/: error.rs
src/rustdesk/: mod.rs  peer.rs  peer_id.rs  rendezvous.rs
static/: styles.css
templates/: base.html  error.html  index.html  login.html  main.html
