[package]
name = "tango"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = "0.14.0"
axum = { version = "0.8.8", features = ["http2"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
confy = { version = "2.0", features = ["toml_conf"] }
hbb_common = { git = "https://github.com/rustdesk/hbb_common.git" }
password-hash = "0.5.0"
rand_core = "0.9.3"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
	"postgres",
	"runtime-tokio",
	"macros",
	"tls-rustls-ring-native-roots",
	"migrate",
] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["sync"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
	"env-filter",
	"fmt",
	"time",
] }
uuid = { version = "1.19.0", features = ["v4", "v7"] }
